# clipfuse

./: podcast-digest-project-plan-v3.md  pyproject.toml
docs/: implementation_plan.md
src/clipfuse/: __init__.py  assemble.py  clip.py  eval.py  models.py  select.py  source.py  transcribe.py  tts.py
src/clipfuse/signals/: __init__.py  audio.py  base.py  external.py  fusion.py  llm.py  text.py
